# vision-system

./: .gitignore  README.md  coordinates_calibration.txt  main.py  pyproject.toml  tracking_detectors.py
