[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.0.145"
numpy = "^1.25.2"
lap = "^0.4.0"
picamera2 = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
